--- a/cvnt/cvnt/templates/index.html
+++ b/cvnt/cvnt/templates/index.html
@@ -13,10 +13,13 @@
   <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
   <!-- Your custom CSS file -->
+  <script src="https://cdn.jsdelivr.net/npm/jquery"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery.terminal/js/jquery.terminal.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery.terminal/css/jquery.terminal.min.css"/>
   <!--<link href="static/css/style.css" rel="stylesheet">-->
   <style>
     #map {
-      height: 400px;
+      height: 80vh; /* Adjust the height as needed */
     }
   </style>
 </head>
@@ -31,6 +34,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="../explorer">File explorer</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="../terminal">Terminal</a>
             </li>
           </ul>
         </div>
@@ -52,21 +58,8 @@
 
   <div class="container mt-5">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-12"> <!-- Modified to span the full width -->
         <div id="map"></div>
-      </div>
-      <div class="col-md-6">
-        <div class="container cursor">
-          <form id="myForm" action="{{ url_for('client.index') }}" method="post" class="terminal-form">
-            {{ form.csrf_token }}
-            <div class="border p-4 rounded">
-              <input type="text" name="cmd" class="terminal-input" autofocus placeholder="=> " required>
-              <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-            </div>
-          </form>
-          <!-- Add a new div to display the response message -->
-          <div id="response-container" class="mt-3"></div>
-        </div>
       </div>
     </div>
   </div>
@@ -98,30 +91,6 @@
     map.fitBounds(bounds);
   </script>
   
-  
-  <style>
-    /* Custom CSS for terminal-like appearance */
-    .terminal-form {
-      background-color: black;
-      color: white;
-      border: 2px solid white; /* Green border */
-      border-radius: 5px;
-      padding: 10px;
-      margin-top: 20px;
-      font-family: monospace; /* Use a monospace font for terminal-like appearance */
-      height: 300px; /* Adjust the height to your preference */
-      overflow-y: auto;
-    }
-    .terminal-input {
-      background-color: transparent; /* Transparent background */
-      color: white;
-      border: none;
-      outline: none;
-      font-family: monospace; /* Use a monospace font for terminal-like appearance */
-      width: 100%; /* Fill the width of the parent container */
-    }
-  </style>
-
   <script>
     // JavaScript function to handle form submission on Enter key press
     function submitFormOnEnter(event) {
@@ -134,7 +103,7 @@
     // Update the response container with the received response
     function updateResponse(response) {
       var responseContainer = document.getElementById('response-container');
-      responseContainer.innerHTML = '<strong>Response:</strong> ' + response;
+      responseContainer.innerHTML = '<strong>Response:</strong> <span style="color: black;">' + response;
     }
 
     // Attach keydown event listener to the form input field(s)
