--- a/cvnt/cvnt/templates/explorer.html
+++ b/cvnt/cvnt/templates/explorer.html
@@ -47,14 +47,14 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="../client">Terminal and Map</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="../terminal">Terminal</a>
+                        <a class="nav-link active" aria-current="page" href="../client">Map</a>
                       </li>
-                    <li class="nav-item">
+                      <li class="nav-item">
+                          <a class="nav-link active" href="../terminal">Terminal</a>
+                        </li>
+                      <li class="nav-item">
                         <a class="nav-link active" href="../explorer">File explorer</a>
-                    </li>
+                      </li>
                 </ul>
             </div>
         </div>
