--- a/cvnt/cvnt/templates/index.html
+++ b/cvnt/cvnt/templates/index.html
@@ -42,13 +42,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../client">Terminal and Map</a>
+              <a class="nav-link active" aria-current="page" href="../client">Map</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="../terminal">Terminal</a>
+              </li>
             <li class="nav-item">
               <a class="nav-link active" href="../explorer">File explorer</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="../terminal">Terminal</a>
             </li>
           </ul>
         </div>
