--- a/cvnt/cvnt/templates/explorer.html
+++ b/cvnt/cvnt/templates/explorer.html
@@ -48,21 +48,39 @@
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="../client">Map</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link active" href="../terminal">Terminal</a>
-                        </li>
-                      <li class="nav-item">
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="../terminal">Terminal</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" href="../explorer">File explorer</a>
-                      </li>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 </header>
 <div align="center">
-    <h1>Local file system</h1>
+    <h1>Implant file system</h1>
     <p><strong>CWD: </strong>{{ current_working_directory }}</p>
+    <h1 id="implant_id">{{ implant_id }}</h1>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <!-- Dropdown menu -->
+            <select class="form-control" id="selected_implant">
+                {% for implant in implants %}
+                    <option value="{{ implant }}">{{ implant }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <div class="col-md-6">
+            <!-- Button with JavaScript to reload the page -->
+            <button type="button" class="btn btn-primary" onclick="changeImplant()">Change Implant</button>
+        </div>
+    </div>
 </div>
 
 <ul class="grid-container">
@@ -87,5 +105,22 @@
         </li>
     {% endfor %}
 </ul>
+
+<script>
+    // Update the value of the implant_id when an option is selected
+    document.getElementById('selected_implant').addEventListener('change', function() {
+        var selectedImplant = this.value;
+        // Update the implant_id
+        document.getElementById('implant_id').innerText = selectedImplant;
+    });
+
+    // Function to change the implant_id
+    function changeImplant() {
+        var selectedImplant = document.getElementById('selected_implant').value;
+        // Update the implant_id
+        document.getElementById('implant_id').innerText = selectedImplant;
+        document.getElementById('newForm').submit();
+    }
+</script>
 </body>
 </html>
