--- a/cvnt/cvnt/templates/explorer.html
+++ b/cvnt/cvnt/templates/explorer.html
@@ -5,9 +5,6 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>File manager</title>
 
-    <!--<link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">-->
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Leaflet CSS -->
@@ -47,10 +44,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../client">Map</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="../terminal">Terminal</a>
+                        <a class="nav-link active" href="../client">Terminal and Map</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="../explorer">File explorer</a>
@@ -63,7 +57,6 @@
 <div align="center">
     <h1>Implant file system</h1>
     <p><strong>CWD: </strong>{{ current_working_directory }}</p>
-    <h1 id="implant_id">{{ implant_id }}</h1>
 </div>
 
 <div class="container">
@@ -71,9 +64,9 @@
         <div class="col-md-6">
             <!-- Dropdown menu -->
             <select class="form-control" id="selected_implant">
-                {% for implant in implants %}
-                    <option value="{{ implant }}">{{ implant }}</option>
-                {% endfor %}
+                <option value="Implant1">Implant 1</option>
+                <option value="Implant2">Implant 2</option>
+                <option value="Implant3">Implant 3</option>
             </select>
         </div>
         <div class="col-md-6">
@@ -84,7 +77,7 @@
 </div>
 
 <ul class="grid-container">
-    <form action="/md">
+    <form action="/md" method="post">
         <li class="grid-item">
             <input type="submit" value="New folder"/>
             <input name="folder" type="text" value="new_folder"/>
@@ -93,7 +86,7 @@
     <li class="grid-item"><a href="/cd?path=..">..</a></li>
     {% for item in file_list[0: -1] %}
         <li class="grid-item">
-            {% if '.' not in item %}
+            {% if '<DIR>' in item %}
                 <img src="../static/img/folder.webp" alt="Folder" style="width: 100px;"><br>
                 <strong><a href="/cd?path={{current_working_directory + '/' + item}}">{{item}}</a></strong><a href="/rm?dir={{item}}"> X</a>
             {% elif '.txt' in item or '.py' in item or '.json' in item %}
@@ -106,21 +99,15 @@
     {% endfor %}
 </ul>
 
-<script>
-    // Update the value of the implant_id when an option is selected
-    document.getElementById('selected_implant').addEventListener('change', function() {
-        var selectedImplant = this.value;
-        // Update the implant_id
-        document.getElementById('implant_id').innerText = selectedImplant;
-    });
+<div id="implant_id"></div>
 
-    // Function to change the implant_id
+<script>
+    // Function to change the implant_id and submit the form
     function changeImplant() {
         var selectedImplant = document.getElementById('selected_implant').value;
-        // Update the implant_id
+        // Update the implant_id text
         document.getElementById('implant_id').innerText = selectedImplant;
-        document.getElementById('newForm').submit();
-    }
+    };
 </script>
 </body>
 </html>
